# VelesDB

./: .bandit  .clippy.toml  .codacy.yml  .flake8  .gitignore  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  sonar-project.properties
crates/tauri-plugin-velesdb/: CHANGELOG.md  Cargo.toml  README.md
crates/tauri-plugin-velesdb/guest-js/: index.ts  package.json
crates/tauri-plugin-velesdb/src/: commands.rs  commands_graph.rs  commands_tests.rs  events.rs  helpers.rs  lib.rs  state.rs  types.rs
crates/tauri-plugin-velesdb/tests/: feature_parity.rs
crates/velesdb-cli/: Cargo.toml  LICENSE_MANAGEMENT.md  README.md
crates/velesdb-cli/src/: cli_types.rs  collection_helpers.rs  collection_helpers_tests.rs  commands.rs  graph.rs  graph_display.rs  helpers.rs  import.rs  import_tests.rs  license.rs  main.rs  repl.rs  repl_collection_cmds.rs  repl_commands.rs  repl_config_cmds.rs  repl_data_cmds.rs  repl_graph_cmds.rs  repl_output.rs  repl_query_cmds.rs  repl_search_cmds.rs  session.rs
crates/velesdb-cli/tests/: cli_integration_tests.rs  e2e_complete.rs  graph_commands_tests.rs  phase3_commands_tests.rs  repl_e2e_tests.rs
crates/velesdb-core/: Cargo.toml  README.md
crates/velesdb-core/benches/: aggregation_benchmark.rs  bench_helpers.rs  bm25_benchmark.rs  chunked_insert_recall_benchmark.rs  concurrency_benchmark.rs  dual_precision_benchmark.rs  gpu_benchmark.rs  gpu_rtx4090.rs  hnsw_benchmark.rs  hnsw_comparison_benchmark.rs  hnsw_tuning.rs  import_benchmark.rs  near_fused_bench.rs  parallel_benchmark.rs  perf_benchmark.rs  pq_hnsw_benchmark.rs  pq_recall_benchmark.rs  pq_recall_multidist.rs  recall_benchmark.rs  recall_comprehensive.rs  scalability_benchmark.rs  scalability_quick.rs  scale_benchmark.rs  search_layer_benchmark.rs  simd_benchmark.rs  smoke_test.rs  sparse_benchmark.rs  velesql_execution_benchmark.rs  wis1_validation.rs
crates/velesdb-core/examples/: crash_driver.rs  profile_batch_insert.rs  simd_precision_check.rs
crates/velesdb-core/src/: alloc_guard.rs  alloc_guard_tests.rs  column_store_tests.rs  config.rs  config_tests.rs  database.rs  database_query_tests.rs  distance.rs  distance_tests.rs  error.rs  error_tests.rs  filter_like_tests.rs  gpu.rs  gpu_tests.rs  guardrails_tests.rs  half_precision.rs  internal_bench.rs  internal_bench_tests.rs  lib.rs  observer.rs  perf_optimizations.rs  perf_optimizations_tests.rs  point.rs  point_tests.rs  quantization_tests.rs  scored_result.rs  simd_neon_prefetch.rs  test_fixtures.rs  validation.rs
crates/velesdb-core/tests/: bdd.rs  chunked_insert_recall.rs  crash_recovery_tests.rs  ddl_e2e_lifecycle_tests.rs  deferred_indexer_integration.rs  e2e_compound.rs  e2e_join.rs  epic_features_integration_tests.rs  hybrid_credibility_tests.rs  integration_scenarios.rs  internal_bench_feature_tests.rs  match_similarity_dimension_guard.rs  match_where_alias_property.rs  match_where_metadata_conditions.rs  phase6_integration.rs  phase7_integration.rs  scale_recall_100k.rs  secondary_index_tests.rs  stress_concurrency_tests.rs  use_cases_integration_tests.rs  velesql_advanced_bdd_tests.rs  velesql_aggregation_bdd_tests.rs  velesql_hybrid_bdd_tests.rs  velesql_operators_bdd_tests.rs  velesql_parser_conformance.rs  velesql_planner_golden.rs  velesql_search_bdd_tests.rs  velesql_setops_bdd_tests.rs  velesql_where_bdd_tests.rs
crates/velesdb-migrate/: Cargo.toml  README.md  TESTING.md
crates/velesdb-migrate/examples/: csv-migration.yaml  elasticsearch-migration.yaml  json-migration.yaml  mongodb-migration.yaml  redis-migration.yaml
crates/velesdb-migrate/scripts/: load-env.ps1  test-with-real-data.ps1
crates/velesdb-migrate/src/: config.rs  lib.rs  main.rs  pipeline.rs  source_config_builder.rs  templates.rs  transform.rs
crates/velesdb-migrate/tests/: pipeline_e2e.rs
crates/velesdb-mobile/: Cargo.toml  README.md
crates/velesdb-mobile/src/: agent.rs  graph.rs  lib.rs  lib_tests.rs  types.rs
crates/velesdb-python/: Cargo.toml  README.md  pyproject.toml
crates/velesdb-python/src/: agent.rs  collection.rs  collection_helpers.rs  graph.rs  graph_collection.rs  graph_store.rs  lib.rs  utils.rs  velesql.rs
crates/velesdb-python/tests/: conftest.py  test_agent_memory.py  test_database_execute_query.py  test_e2e_complete.py  test_graph.py  test_graph_collection_match.py  test_issue_fixes.py  test_recall_gate.py  test_search_filter.py  test_velesdb.py  test_velesql.py
crates/velesdb-server/: Cargo.toml  README.md
crates/velesdb-server/src/: auth.rs  config.rs  lib.rs  main.rs  tls.rs  types.rs
crates/velesdb-server/tests/: api_integration.rs  auth_integration.rs  core_feature_parity_tests.rs  health_integration.rs  match_api_tests.rs
crates/velesdb-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/velesdb-wasm/e2e/: package.json
crates/velesdb-wasm/src/: filter.rs  graph_persistence.rs  idb_helpers.rs  lib.rs  parsing.rs  persistence.rs  serialization.rs  sparse.rs  store_get.rs  store_insert.rs  store_new.rs  store_search.rs  vector_ops.rs  velesql.rs
demos/rag-pdf-demo/: README.md  benchmark_latency.py  benchmark_layers.py  pyproject.toml
demos/rag-pdf-demo/src/: __init__.py  main.py  models.py  rag_engine.py
demos/rag-pdf-demo/tests/: conftest.py
demos/tauri-rag-app/src-tauri/: Cargo.toml
examples/ecommerce_recommendation/: Cargo.toml  README.md  package.json
examples/ecommerce_recommendation/src/: main.rs
examples/ecommerce_recommendation/tests/: e2e.spec.ts
examples/mini_recommender/: Cargo.toml  README.md  main.rs
examples/rust/: Cargo.toml  README.md  multimodel_search.rs
integrations/common/: LICENSE  README.md  pyproject.toml
integrations/common/tests/: test_graph.py  test_ids.py  test_memory.py  test_security.py
integrations/langchain/: LICENSE  README.md  pyproject.toml
integrations/langchain/tests/: test_core_feature_parity.py  test_e2e_complete.py  test_graph_toolkit.py  test_memory.py  test_vectorstore.py  test_velesql_v2.py
integrations/llamaindex/: LICENSE  README.md  pyproject.toml
(+919 files in other folders)
