[workspace]
resolver = "2"
members = [
    "crates/velesdb-core",
    "crates/velesdb-server",
    "crates/velesdb-python",
    "crates/velesdb-cli",
    "crates/velesdb-wasm",
    "crates/velesdb-migrate",
    "crates/velesdb-mobile",
    "crates/tauri-plugin-velesdb",
]
exclude = [
    "demos/tauri-rag-app/src-tauri",
    "examples/mini_recommender",
    "examples/ecommerce_recommendation",
]

[workspace.package]
version = "1.9.1"
edition = "2021"
rust-version = "1.83"
license-file = "LICENSE"
repository = "https://github.com/cyberlife-coder/velesdb"
homepage = "https://velesdb.com"
documentation = "https://deepwiki.com/cyberlife-coder/VelesDB"
keywords = ["vector-database", "embeddings", "rag", "local-first", "semantic-search"]
categories = ["database", "data-structures", "algorithms", "science"]
description = "VelesDB: The Local Vector Database for Rust & AI. Microsecond semantic search, zero network latency, runs anywhere."
authors = ["Julien Lange <contact@wiscale.fr>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
memmap2 = "0.9"
postcard = { version = "1", features = ["alloc", "use-std"] }

# Indexing
# Note: hnsw_rs is defined per-crate with target-specific features
# (simdeez_f on x86_64 only). See crates/velesdb-core/Cargo.toml
roaring = { version = "0.10", features = ["serde"] }

# API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# Testing
criterion = "0.5"
proptest = "1.5"
tempfile = "3.14"
rand = "0.8"

# Cryptography (for license validation)
ed25519-dalek = "2.1"
base64 = "0.22"

# Small-vector optimization
smallvec = "1"

# Internal workspace crates
velesdb-core = { path = "crates/velesdb-core", version = "1.9.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1

# =============================================================================
# Workspace-wide Clippy Configuration (01-02)
# =============================================================================
# These lints are allowed workspace-wide as they represent style preferences
# without bug risk. Security-related lints (casts, unsafe) must use targeted
# #[allow] with SAFETY-style justification at the function level.
[workspace.lints.clippy]
# EPIC-077 / Plan 04-07: Enable pedantic linting for production quality
pedantic = { level = "warn", priority = -1 }

# Naming and style (no bug risk)
module_name_repetitions = "allow"
doc_markdown = "allow"
if_not_else = "allow"
single_match_else = "allow"
wildcard_imports = "allow"
used_underscore_binding = "allow"

# Refactoring suggestions (no bug risk)
option_if_let_else = "allow"
manual_let_else = "allow"
collapsible_if = "allow"
match_single_binding = "allow"
use_self = "allow"

# Performance micro-optimizations (no bug risk)
redundant_clone = "allow"
missing_const_for_fn = "allow"
suboptimal_flops = "allow"
imprecise_flops = "allow"
large_stack_arrays = "allow"
unnecessary_cast = "allow"
redundant_pub_crate = "allow"

# API design preferences (no bug risk)
implicit_hasher = "allow"
derive_partial_eq_without_eq = "allow"

# Async/dead code (no bug risk)
unused_async = "allow"
unused_self = "allow"
unused_peekable = "allow"

# Documentation preferences (no bug risk)
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Struct field naming (no bug risk)
struct_field_names = "allow"

# Function length — target is 50 NLOC (.clippy.toml), enforced by Codacy.
# Clippy set to allow since Codacy is the hard gate for this metric.
too_many_lines = "allow"

# Code style preferences (no bug risk)
ptr_as_ptr = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
set_contains_or_insert = "allow"
useless_let_if_seq = "allow"
manual_assert = "allow"
assertions_on_constants = "allow"
uninlined_format_args = "allow"

# Numeric casts - these require justification at function level, not workspace
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_possible_wrap = "warn"
cast_lossless = "allow"

# Thread safety - requires SAFETY documentation
non_send_fields_in_send_ty = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

