[package]
name = "tauri-plugin-velesdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Tauri plugin for VelesDB - Vector search in desktop apps"
license = "MIT"
repository = "https://github.com/cyberlife-coder/VelesDB"
keywords = ["tauri", "plugin", "vector", "database", "search"]
categories = ["database", "gui"]
links = "tauri-plugin-velesdb"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
dirs = "5.0"

# VelesDB core dependency (local path for development)
velesdb-core = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
toml = "0.8"

[features]
default = ["velesdb-core/default"]
gpu = ["velesdb-core/gpu"]
internal-bench = ["velesdb-core/internal-bench"]
loom = ["velesdb-core/loom"]
openapi = ["velesdb-core/openapi"]
persistence = ["velesdb-core/persistence"]
update-check = ["velesdb-core/update-check"]

[lints]
workspace = true
