[package]
name = "velesdb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Interactive CLI and REPL for VelesDB with VelesQL support"
keywords = ["vector-database", "cli", "repl", "sql"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "velesdb"
path = "src/main.rs"

[dependencies]
velesdb-core = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# REPL
rustyline = { version = "14.0", features = ["derive"] }

# Table formatting
comfy-table = "7.1"

# Colors
colored = "2.1"

# Serialization
serde_json = { workspace = true }
serde = { workspace = true }

# CSV parsing
csv = "1.3"

# Progress bar
indicatif = "0.17"

# Error handling
anyhow = { workspace = true }

# Time measurement
instant = "0.1"

# Directories
dirs = "5.0"

# License validation (Ed25519 cryptographic signatures)
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
chrono = "0.4"

[features]
default = ["velesdb-core/default", "update-check"]
gpu = ["velesdb-core/gpu"]
update-check = ["velesdb-core/update-check"]
loom = ["velesdb-core/loom"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true

# =============================================================================
# Linux .deb package configuration (cargo-deb)
# =============================================================================
[package.metadata.deb]
maintainer = "Julien Lange <contact@wiscale.fr>"
copyright = "2025, Julien Lange (WiScale France)"
license-file = ["../../LICENSE", "0"]
extended-description = """VelesDB is a high-performance vector database written in Rust.
Features:
- HNSW index with SIMD acceleration
- VelesQL: SQL-like query language
- Interactive REPL
- REST API server
- Sub-millisecond latency"""
section = "database"
priority = "optional"
assets = [
    ["target/release/velesdb", "usr/bin/", "755"],
    ["target/release/velesdb-server", "usr/bin/", "755"],
    ["target/release/velesdb-migrate", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/velesdb/", "644"],
    ["../../LICENSE", "usr/share/doc/velesdb/", "644"],
    ["../../docs/reference/ARCHITECTURE.md", "usr/share/doc/velesdb/", "644"],
    ["../../docs/BENCHMARKS.md", "usr/share/doc/velesdb/", "644"],
    ["../../crates/velesdb-migrate/README.md", "usr/share/doc/velesdb/migrate/", "644"],
]
