[package]
name = "velesdb-core"
description = "High-performance vector database engine written in Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
roaring = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }

# WASM-incompatible deps - only for non-WASM targets
# memmap2 moved to target-specific section below

# HNSW: Native implementation only (v1.0+)
# hnsw_rs dependency removed - native HNSW is 1.2x faster

# UUID - target-specific for WASM compatibility
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1.7"
features = ["v4", "serde"]

[dependencies.smallvec]
workspace = true

[dependencies.parking_lot]
version = "0.12"

# rayon moved to optional deps section (persistence feature)

[dependencies.arc-swap]
version = "1.7"

[dependencies.bytes]
version = "1.11"

[dependencies.rustc-hash]
version = "2.0"

[dependencies.indexmap]
version = "2.7"

# Lock-free concurrent HashMap for high-throughput parallel operations
[dependencies.dashmap]
version = "5.5"

# wide crate removed - EPIC-075 consolidation to simd_native

# GPU acceleration (optional)
[dependencies.wgpu]
version = "23"
optional = true

[dependencies.pollster]
version = "0.4"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.half]
version = "2.4"
features = ["std", "serde"]

# EPIC-033/US-003: Windows hole-punch (FSCTL_SET_ZERO_DATA)
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_System_Ioctl", "Win32_System_IO"]

# EPIC-033/US-003: Linux hole-punch (fallocate)
[target.'cfg(target_os = "linux")'.dependencies.libc]
version = "0.2"

[dependencies.rand]
workspace = true

[dependencies.pest]
version = "2.7"

[dependencies.pest_derive]
version = "2.7"

[features]
## Feature flags
##
## - `persistence` (default): Enables mmap storage, WAL, rayon parallelism, and tokio async.
##   Disable for WASM builds: `velesdb-core = { default-features = false }`
## - `gpu`: Enables wgpu-based GPU acceleration for distance calculations.
## - `update-check`: Enables HTTP client for automatic version checking.
## - `openapi`: Enables utoipa::ToSchema derives on api_types DTOs.
## - `loom`: Enables loom-based concurrency testing (nightly only).
##   Run with: `cargo +nightly test --features loom --test loom_tests`
default = ["persistence"]
gpu = ["wgpu", "pollster", "bytemuck"]
internal-bench = []
openapi = ["dep:utoipa"]
persistence = ["dep:memmap2", "dep:rayon", "dep:tokio", "dep:ndarray", "dep:fs2"]
update-check = ["dep:reqwest", "dep:tokio", "dep:sha2", "dep:hex", "dep:hostname", "dep:whoami"]
loom = ["dep:loom"]

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
serial_test = "3.1"
clap = { version = "4.5", features = ["derive"] }
rand_distr = "0.4"

# Loom for concurrency testing (EPIC-023) - optional dependency, not dev-dependency
[dependencies.loom]
version = "0.7"
optional = true

[[example]]
name = "crash_driver"
path = "examples/crash_driver.rs"
required-features = ["persistence"]

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "hnsw_benchmark"
harness = false

[[bench]]
name = "scalability_benchmark"
harness = false

[[bench]]
name = "wis1_validation"
harness = false

[[bench]]
name = "hnsw_tuning"
harness = false

[[bench]]
name = "filter_benchmark"
harness = false

[[bench]]
name = "velesql_benchmark"
harness = false

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "overhead_benchmark"
harness = false

[[bench]]
name = "column_filter_benchmark"
harness = false

[[bench]]
name = "bm25_benchmark"
harness = false

[[bench]]
name = "recall_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false

[[bench]]
name = "import_benchmark"
harness = false

[[bench]]
name = "perf_benchmark"
harness = false

[[bench]]
name = "quantization_benchmark"
harness = false

[[bench]]
name = "gpu_benchmark"
harness = false
required-features = ["gpu"]

[[bench]]
name = "recall_comprehensive"
harness = false

[[bench]]
name = "dual_precision_benchmark"
harness = false

[[bench]]
name = "hnsw_comparison_benchmark"
harness = false

[[bench]]
name = "trigram_benchmark"
harness = false

[[bench]]
name = "concurrency_benchmark"
harness = false

[[bench]]
name = "edge_store_benchmark"
harness = false

[[bench]]
name = "match_parser_benchmark"
harness = false

[[bench]]
name = "similarity_benchmark"
harness = false

[[bench]]
name = "property_index_benchmark"
harness = false

[[bench]]
name = "orderby_similarity_benchmark"
harness = false

[[bench]]
name = "aggregation_benchmark"
harness = false

[[bench]]
name = "velesql_execution_benchmark"
harness = false

[[bench]]
name = "diagnose_simd"
harness = false

[[bench]]
name = "gpu_rtx4090"
harness = false
required-features = ["gpu"]

[[bench]]
name = "avx512_comparison_i9"
harness = false

[[bench]]
name = "i9_14900k_benchmark"
harness = false

[[bench]]
name = "smoke_test"
harness = false

# ============================================================================
# Target-specific dependencies (WASM compatibility)
# ============================================================================

# getrandom requires the "js" feature to compile on wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

# ============================================================================
# Optional deps for persistence feature (not WASM-compatible)
# ============================================================================
[dependencies.memmap2]
workspace = true
optional = true

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.tokio]
workspace = true
optional = true

# Update check dependencies (optional, gated behind update-check feature)
[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.hostname]
version = "0.4"
optional = true

[dependencies.whoami]
version = "1.5"
optional = true

[dependencies.ndarray]
version = "0.16"
default-features = false
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["json"]
optional = true

[dependencies.fs2]
version = "0.4"
optional = true

# OpenAPI schema derives (optional, gated behind openapi feature)
[dependencies.utoipa]
version = "5"
optional = true

[lints]
workspace = true

[[bench]]
name = "pq_hnsw_benchmark"
harness = false

[[bench]]
name = "pq_recall_benchmark"
harness = false

[[bench]]
name = "sparse_benchmark"
harness = false

[[bench]]
name = "pq_recall_multidist"
harness = false

[[bench]]
name = "scalability_quick"
harness = false
required-features = ["internal-bench"]
