[package]
name = "velesdb-python"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Python bindings for VelesDB vector database"
keywords = ["vector-database", "python", "pyo3", "embeddings", "similarity-search"]
categories = ["database", "science"]

[lib]
name = "velesdb"
crate-type = ["cdylib"]

[dependencies]
velesdb-core = { workspace = true }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = { workspace = true }
numpy = "0.24"

[features]
default = ["velesdb-core/default"]
gpu = ["velesdb-core/gpu"]
update-check = ["velesdb-core/update-check"]
loom = ["velesdb-core/loom"]

[build-dependencies]
pyo3-build-config = "0.24"

[lints]
workspace = true
