[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "velesdb"
version = "1.9.1"
description = "VelesDB: The Local Vector Database for Python & AI. Microsecond semantic search, zero network latency."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "VelesDB Team", email = "contact@wiscale.fr" }
]
keywords = ["vector-database", "embeddings", "rag", "local-first", "ai-memory", "semantic-search", "sqlite-alternative", "llm", "langchain", "llamaindex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
    "maturin>=1.4",
]

[project.urls]
Homepage = "https://github.com/cyberlife-coder/VelesDB"
Documentation = "https://github.com/cyberlife-coder/VelesDB#readme"
Repository = "https://github.com/cyberlife-coder/VelesDB"
Issues = "https://github.com/cyberlife-coder/VelesDB/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "velesdb"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

