[package]
name = "velesdb-server"
description = "REST API server for VelesDB vector database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
name = "velesdb_server"
path = "src/lib.rs"

[[bin]]
name = "velesdb-server"
path = "src/main.rs"

[dependencies]
velesdb-core = { path = "../velesdb-core", version = "1.4.0", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
parking_lot = "0.12"

# OpenAPI/Swagger documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = ["velesdb-core/default"]
gpu = ["velesdb-core/gpu"]
loom = ["velesdb-core/loom"]
persistence = ["velesdb-core/persistence"]
prometheus = []
update-check = ["velesdb-core/update-check"]

[dev-dependencies]
# Use native-tls to avoid ring compilation issues on aarch64-apple-darwin
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio-test = "0.4"
tempfile = { workspace = true }
tower = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
