[package]
name = "velesdb-wasm"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "VelesDB for WebAssembly - Vector search in the browser"
keywords = ["vector-database", "wasm", "webassembly", "browser", "search"]
categories = ["database", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wide = "0.7"
# Disable persistence feature for WASM (tokio/mio, memmap2, rayon don't support WASM)
velesdb-core = { workspace = true, default-features = false }

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Event",
    "DomStringList",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "IdbKeyRange",
    "DomException",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

[lints]
workspace = true

# Note: wasm_bench.rs is auto-detected as a bench target
# No explicit [[bench]] needed - Cargo handles it automatically

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt with size optimization (EPIC-053/US-006)
# Required features for Rust-generated WASM:
# - bulk-memory: memory.copy/fill operations
# - nontrapping-float-to-int: i32.trunc_sat_f32_u etc.
wasm-opt = ["-Os", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

