[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-velesdb"
version = "1.7.2"
description = "LangChain VectorStore for VelesDB: The Local AI Memory Database. Microsecond RAG retrieval."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VelesDB Team", email = "contact@wiscale.fr"}
]
keywords = ["langchain", "velesdb", "vector-database", "embeddings", "rag", "local-first", "ai-memory", "semantic-search", "llm", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "velesdb>=0.8.0",
    "velesdb-common>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "langchain>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/cyberlife-coder/VelesDB"
Documentation = "https://velesdb.com/docs/integrations/langchain"
Repository = "https://github.com/cyberlife-coder/VelesDB"

[tool.setuptools.packages.find]
where = ["src"]
