[package]
name = "tauri-rag-app"
version = "0.1.0"
description = "Local RAG Desktop App with VelesDB"
authors = ["Wiscale France"]
license-file = "../../../LICENSE"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-velesdb = { path = "../../../crates/tauri-plugin-velesdb" }
velesdb-core = { path = "../../../crates/velesdb-core", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ML embeddings for semantic search
fastembed = "4"
tokio = { version = "1", features = ["sync", "rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
